Add link, change title.

--- a/katilimcilar.html
+++ b/katilimcilar.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
   <link rel="icon" href="assets/img/favicon.ico">
 
-  <title>#OtizmİcinMavi</title>
+  <title>Katılımcılar - #OtizmİcinMavi</title>
 
   <!-- Bootstrap core CSS -->
   <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -33,7 +33,7 @@
 
   <div id="header">
     <div class="carrier">
-      <div class="logo">#OtizmİçinMavi</div>
+      <a href="/"><div class="logo">#OtizmİçinMavi</div></a>
       <div class="social" style="font-size: 10px; color:#fff !important">
         <a href="https://otsimo.com"> powered by <img style="height: 30px;" src="assets/img/white.png"></a>
       </div>
