--- a/katilimcilar.html
+++ b/katilimcilar.html
@@ -1,3 +1,4 @@
+<!-- Made in rush at 20 mins, so please dont dudje. Thank you :) -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <link rel="icon" href="assets/img/favicon.ico">
-
+  <!-- Made in rush at 20 mins, so please dont dudje. Thank you :) -->
   <title>Katılımcılar - #OtizmİcinMavi</title>
 
   <!-- Bootstrap core CSS -->
