--- a/index.html
+++ b/index.html
@@ -120,25 +120,26 @@
             <div class="carousel-inner">
               <div class="item active">
                 <!--<img style="margin: auto;height: 100px;" src="./assets/img/team/gianni.png">-->
-                <h3 style="margin-top: 10px;">#OtizmİçinMavi sadece farkındalığı yaymak için değil aynı zamanda Otizmi</h3>
+                <h3 style="margin-top: 10px;"><b>#OtizmİçinMavi</b> sadece farkındalığı göstermek için değil, aynı zamanda Otizmi daha çok kişiye anlatmak için mükemmel bir yol.</h3>
                 <h5>
-                  <tgr>HASAN ZAFER ELCİK</tgr>
+                  <tgr>BATUHAN ÇEVİK</tgr><br/>
+                  <tgr>TEDx</tgr>
                 </h5>
               </div>
               <div class="item">
                 <!--<img style="margin: auto;height: 100px;" src="./assets/img/team/gianni.png">-->
-                <h3>It is a long established fact that a reader will be distracted by the readable content of a page when looking
-                  at its layout.</h3>
+                <h3>Her 68 çocuktan 1'i otizmli. Onların sesi olmak için mavi giyiyorum. Otizm farkındalığını dünyaya yayıyorum. <b>#OtizmİcinMavi</b></h3>
                 <h5>
-                  <tgr>MEHRU AYGÜL</tgr>
+                  <tgr>MEHRU AYGÜL</tgr><br/>
+                  <tgr>Girişimcilik Vakfı</tgr>
                 </h5>
               </div>
               <div class="item">
                 <!--<img style="margin: auto;height: 100px;" src="./assets/img/team/gianni.png">-->
-                <h3>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration,
-                  by injected humour.</h3>
+                <h3>Bir baba olarak her çocuğun hakkını savunmam gerektiğini biliyorum. Otizmli çocuklar tek ihtiyaçları olan eğitime ulaşamıyorlar. Bu nedenle, <b>#OtizmİcinMavi</b> giyiyorum.</h3>
                 <h5>
-                  <tgr>LISA SMITH</tgr>
+                  <tgr>ATA UZUNHASAN</tgr><br/>
+                  <tgr>Galata İş Melekleri</tgr>
                 </h5>
               </div>
             </div>
@@ -296,9 +297,9 @@
         <h3>Facebook profil fotoğrafını otizmi simgeleyen mavi puzzlelarla doldur.</h3>
         <h4><b>Farkındalığı yay.</b></h4>
         <div style="margin: auto;text-align: center; margin-top: 15px;">
-          <button class="btn btn-conf btn-primary btn-blue" type="submit" style="font-size: 13px; font-weight: 700;">
+          <a href="https://twibbon.com/Support/otizmicinmavi"> <button class="btn btn-conf btn-primary btn-blue" type="submit" style="font-size: 13px; font-weight: 700;">
         Hemen Değİştİr
-        </button>
+        </button></a>
         </div>
       </div>
       <!--/row-->
