--- a/index.html
+++ b/index.html
@@ -122,24 +122,23 @@
                 <!--<img style="margin: auto;height: 100px;" src="./assets/img/team/gianni.png">-->
                 <h3 style="margin-top: 10px;"><b>#OtizmİçinMavi</b> sadece farkındalığı göstermek için değil, aynı zamanda Otizmi daha çok kişiye anlatmak için mükemmel bir yol.</h3>
                 <h5>
-                  <tgr>BATUHAN ÇEVİK</tgr><br/>
-                  <tgr>TEDx</tgr>
+                  <tgr>BATUHAN ÇEVİK<br/>
+                  TEDx</tgr>
                 </h5>
               </div>
               <div class="item">
                 <!--<img style="margin: auto;height: 100px;" src="./assets/img/team/gianni.png">-->
                 <h3>Her 68 çocuktan 1'i otizmli. Onların sesi olmak için mavi giyiyorum. Otizm farkındalığını dünyaya yayıyorum. <b>#OtizmİcinMavi</b></h3>
                 <h5>
-                  <tgr>MEHRU AYGÜL</tgr><br/>
-                  <tgr>Girişimcilik Vakfı</tgr>
+                  <tgr>MEHRU AYGÜL<br/>
+                  Girişimcilik Vakfı</tgr>
                 </h5>
               </div>
               <div class="item">
                 <!--<img style="margin: auto;height: 100px;" src="./assets/img/team/gianni.png">-->
                 <h3>Bir baba olarak her çocuğun hakkını savunmam gerektiğini biliyorum. Otizmli çocuklar tek ihtiyaçları olan eğitime ulaşamıyorlar. Bu nedenle, <b>#OtizmİcinMavi</b> giyiyorum.</h3>
                 <h5>
-                  <tgr>ATA UZUNHASAN</tgr><br/>
-                  <tgr>Galata İş Melekleri</tgr>
+                  <tgr>ATA UZUNHASAN<br/>Galata İş Melekleri</tgr>
                 </h5>
               </div>
             </div>
