--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     <div class="container">
       <div class="row centered">
         <h2 style="margin-top: 0px;">Mavi Tişörtün Yok Mu?</h2>
-        <img style="max-height: 200px;" src="./assets/img/ribon.png"><br/>
+        <img style="max-height: 200px; width: 100%;" src="./assets/img/ribon.png"><br/>
         <h3>Facebook profil fotoğrafını otizmi simgeleyen mavi puzzlelarla doldur.</h3>
         <h4><b>Farkındalığı yay.</b></h4>
         <div style="margin: auto;text-align: center; margin-top: 15px;">
