--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <img src="assets/img/client9.png" alt="">
         </div>
         <div class="col-sm-2">
-          <img src="assets/img/client10.png" alt="">
+          <img src="assets/img/client.png" alt="">
         </div>
       </div>
       <!--/row-->
