--- a/index.html
+++ b/index.html
@@ -76,34 +76,34 @@
       <div class="row sponsor centered">
         <h2 style="margin-top: 0px;">Kişiler ve Kurumlardan Profesyoneller Bize Destek Oluyor.</h2>
         <div class="col-sm-2 col-sm-offset-1">
-          <img src="assets/img/client1.png" alt="">
+          <a href="/katilimcilar.html"><img src="assets/img/client1.png" alt=""></a>
         </div>
         <div class="col-sm-2">
-          <img src="assets/img/client2.png" alt="">
+          <a href="/katilimcilar.html"><img src="assets/img/client2.png" alt=""></a>
         </div>
         <div class="col-sm-2">
-          <img src="assets/img/client3.png" alt="">
+          <a href="/katilimcilar.html"><img src="assets/img/client3.png" alt=""></a>
         </div>
         <div class="col-sm-2">
-          <img src="assets/img/client4.png" alt="">
+          <a href="/katilimcilar.html"><img src="assets/img/client4.png" alt=""></a>
         </div>
         <div class="col-sm-2">
-          <img src="assets/img/client5.png" alt="">
+          <a href="/katilimcilar.html"><img src="assets/img/client5.png" alt=""></a>
         </div>
         <div class="col-sm-2 col-sm-offset-1">
-          <img src="assets/img/client6.png" alt="">
+          <a href="/katilimcilar.html"><img src="assets/img/client6.png" alt=""></a>
         </div>
         <div class="col-sm-2">
-          <img src="assets/img/client7.png" alt="">
+          <a href="/katilimcilar.html"><img src="assets/img/client7.png" alt=""></a>
         </div>
         <div class="col-sm-2">
-          <img src="assets/img/client8.png" alt="">
+          <a href="/katilimcilar.html"><img src="assets/img/client8.png" alt=""></a>
         </div>
         <div class="col-sm-2">
-          <img src="assets/img/client9.png" alt="">
+          <a href="/katilimcilar.html"><img src="assets/img/client9.png" alt=""></a>
         </div>
         <div class="col-sm-2">
-          <img src="assets/img/client.png" alt="">
+          <a href="/katilimcilar.html"><img src="assets/img/client.png" alt=""></a>
         </div>
       </div>
       <!--/row-->
