Add fixed button in katilimcilar.html

--- a/katilimcilar.html
+++ b/katilimcilar.html
@@ -32,6 +32,9 @@
 
 <body>
 
+      <a href="https://otizmicinmavi.com/">
+        <div class="iwanttoattend">Katılmak İstiyorum!</div>
+      </a>
   <div id="header">
     <div class="carrier">
       <a href="/"><div class="logo">#OtizmİçinMavi</div></a>
@@ -40,6 +43,7 @@
       </div>
     </div>
   </div>
+
   <!-- /H -->
   <div id="g">
     <div class="container katContainer">
