--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 centered">
                     <h1>Farkındalığını göster, #OtizmİçinMavi giy.</h1>
-                    <h3><b>Otizm Farkındalık Ayı olan Nisan boyunca bize katılın,<br/>#OtizmİçinMavi giyin, sosyal medyada paylaşın,<br/>hem farkındalığı artırın, hem de çekildiğiniz fotoğraf sitemizde yayınlansın.</b>
+                    <h3><b>Büyük Gün 15 Nisan!<br/>Otizm Farkındalık Ayı olan Nisan boyunca bize katılın,<br/>#OtizmİçinMavi giyin, sosyal medyada paylaşın,<br/>hem farkındalığı artırın, hem de çekildiğiniz fotoğraf sitemizde yayınlansın.</b>
                     </h3>
                     <div class="mtb">
                         <a href="#jump"><button class='btn btn-conf btn-primary btn-blue' type="submit">DESTEK OLMAK İSTİYORUM</button></a>
