--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     <br/><br/>Şimdi otizm hakkında bilgilerini tazelemek için 10 soruluk bir Onedio testi çözelim:
                 </p>
                 <p class="store">
-                    <a href="#"><img src="assets/img/onedio.png" height="50" alt=""></a>
+                    <a href="https://onedio.com/haber/farkindalik-spektrumunda-neredesin-764514"><img src="assets/img/onedio.png" height="50" alt=""></a>
                 </p>
             </div>
             <div class="col-md-6">
