--- a/katilimcilar.html
+++ b/katilimcilar.html
@@ -118,6 +118,7 @@
             </div>
           </div>
 
+
           <div class="gr-carrier">
             <div class="gr">
               <img src="./assets/img/17586908_395991867447088_701727227292680192_n.jpg" />
@@ -137,6 +138,17 @@
               <div class="logoText">"Bu guzel hediye icin @otsimotr 'e tesekkur ederim! #otizmicinmavi" <br/><br/>
               </div>
               <div><img style="max-height: 20px;" src="./assets/img/mutlubiev.png" /></div>
+            </div>
+          </div>
+
+          <div class="gr-carrier">
+            <div class="gr">
+              <img src="./assets/img/17438793_1877073899200025_843841729407746048_n.jpg" />
+            </div>
+            <div class="textorlogo">
+              <div class="logoText">"Nisan, Otizm Farkındalık Ayı olarak biliniyor. Türkiye'de her 10 insanın 9'u otizmi bilmediği için otizmli çocuklara geç tanı konuluyor "
+              </div>
+              <div><img style="max-height: 20px;" src="./assets/img/kidimami.png" /></div>
             </div>
           </div>
 
@@ -386,6 +398,28 @@
             </div>
             <div class="textorlogo">
               <div class="logoText">"2 Nisan Pazar Dünya Otizm Farkındalık Günü! #otizmiçinmavi "<br/>-Ali Uğur Öztunca
+              </div>
+
+            </div>
+          </div>
+
+          <div class="gr-carrier">
+            <div class="gr">
+              <img src="./assets/img/17332826_145300222665541_4111444520262959104_n.jpg" />
+            </div>
+            <div class="textorlogo">
+              <div class="logoText">"2 Nisan Pazar Dünya Otizm Farkındalık Günü, #otizmiçinmavi giy!"<br/>-Orhun Canca
+              </div>
+
+            </div>
+          </div>
+
+          <div class="gr-carrier">
+            <div class="gr">
+              <img src="./assets/img/17587458_145555109306576_7385744814400077824_n.jpg" />
+            </div>
+            <div class="textorlogo">
+              <div class="logoText">"Nisan ayı otizm farkındalık ayı:) #otizmicinmavi giy!"<br/>-Didem Ertem
               </div>
 
             </div>
