Add hikayeler section.

--- a/index.html
+++ b/index.html
@@ -306,6 +306,29 @@
     </div>
     <!--/g-->
 
+    <div id="green">
+        <div class="container ">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3 centered">
+                    <div class="item active">
+                        <!--<img style="margin: auto;height: 100px;" src="./assets/img/team/gianni.png">-->
+                        <h3 style="margin-top: 10px; line-height:1.8em">Otizm Farkındalık Ayı olan Nisan boyunca sizlerle Otizm ve Otizm ile yaşam ile alakadar hikayeler paylaşıyoruz. Paylaştığımız hikayeleri görebilirsiniz.</h3>
+                        <h5></h5>
+                    </div>
+                </div>
+            </div>
+            <!--/row-->
+        </div>
+        <div style="margin: auto;text-align: center; margin-top: 15px;">
+            <a href="./hikayeler.html">
+                <button class="btn btn-conf btn-info" type="submit" style="font-size: 13px; font-weight: 700;">
+          Hikayeleri Göster
+        </button>
+            </a>
+        </div>
+        <!--/container-->
+
+    </div>
 
     <div id="f">
         <div class="container">
