--- a/hikayeler.html
+++ b/hikayeler.html
@@ -45,7 +45,7 @@
       </div>
     </div>
   </div>
-
+Calum Titmus: Otizm ve Madalyalar
   <!-- /H -->
   <div id="g">
     <div class="container katContainer">
@@ -53,6 +53,14 @@
         <h2 style="margin-top: 0px;">#OtizmİçinMavi Hikayeleri</h2>
         <p>Otizm Farkındalık Ayı olan Nisan boyunca sizlerle Otizm ve Otizm ile yaşam ile alakadar hikayeler paylaşıyoruz. Paylaştığımız hikayeleri görebilirsiniz.</p>
         <div class="gridHolder">
+          <a href="/hikaye/calum-timus.html">
+            <div class="gr-post">
+              <div class="image"><img src="./assets/img/post/3.jpg"/></div>
+              <div class="title">Calum Titmus: Otizm ve Madalyalar!</div>
+              <div class="subtext">Hayattaki en büyük tutkusu buz pateni ve şimdi ülkesini olimpiyatlarda temsil ediyor!</div>
+              <div class="button">Devamını Oku</div>
+            </div>
+          </a>
           <a href="/hikaye/dunyanin-ilk-otizmli-basketbolcusu.html">
             <div class="gr-post">
               <div class="image"><img src="./assets/img/post/2.jpg"/></div>
